<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="3dp"
            android:layout_marginEnd="4dp" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="66dp"
            android:layout_marginBottom="208dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.793">

        <TextView
                android:text="@string/event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView7"
                android:fontFamily="sans-serif-condensed" android:textSize="20sp" tools:layout_editor_absoluteY="288dp"
                tools:layout_editor_absoluteX="0dp"/>
        <TextView
                android:text="@string/meeting_with_david"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView13"
                android:fontFamily="sans-serif-black" android:textSize="24sp" tools:layout_editor_absoluteY="139dp"
                tools:layout_editor_absoluteX="0dp" android:layout_marginStart="20dp"/>
        <TextView
                android:text="@string/priority_level"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView5"
                android:fontFamily="sans-serif-condensed" android:textSize="20sp" tools:layout_editor_absoluteY="288dp"
                tools:layout_editor_absoluteX="0dp" android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/high"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView12"
                android:fontFamily="sans-serif-black" android:textSize="24sp" tools:layout_editor_absoluteY="139dp"
                tools:layout_editor_absoluteX="0dp" android:layout_marginStart="20dp"/>
        <TextView
                android:text="@string/event_type"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView4"
                android:fontFamily="sans-serif-condensed" android:textSize="20sp" tools:layout_editor_absoluteY="139dp"
                tools:layout_editor_absoluteX="0dp" android:layout_marginTop="20dp"/>
        <TextView
                android:text="@string/academic"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView10"
                android:fontFamily="sans-serif-black" android:textSize="24sp" tools:layout_editor_absoluteY="139dp"
                tools:layout_editor_absoluteX="0dp" android:layout_marginStart="20dp"/>
        <TextView
                android:text="@string/time"
                android:layout_width="match_parent"
                android:layout_height="36dp" android:id="@+id/textView8"
                android:fontFamily="sans-serif-condensed" android:textSize="20sp" tools:layout_editor_absoluteY="139dp"
                tools:layout_editor_absoluteX="0dp" android:layout_marginTop="20dp"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <TextView
                    android:text="@string/_12_15_pm"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content" android:id="@+id/textView9" android:layout_weight="1"
                    android:textSize="24sp" android:fontFamily="sans-serif-black" android:layout_marginStart="20dp"/>
        </LinearLayout>
        <Button
                android:text="@string/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:background="@color/planmoGreen"
                android:layout_marginTop="20dp"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>