<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="401dp"
            android:layout_height="743dp"
            android:gravity="center_horizontal" android:id="@+id/linearLayout2"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp">
        <ImageView
                android:layout_width="396dp"
                android:layout_height="111dp" app:srcCompat="@drawable/statusbar"
                android:id="@+id/imageView7" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.466"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.0" android:scaleType="fitCenter" android:padding="0dp"
                android:contentDescription="@string/statusbar"/>
        <TextView
                android:text="@string/customize_your_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView6"
                android:fontFamily="sans-serif-black" android:textSize="20sp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintHorizontal_bias="0.497"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.25">
                <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp" app:srcCompat="@drawable/greenbox"
                        android:id="@+id/imageView12"
                        tools:layout_editor_absoluteY="263dp" tools:layout_editor_absoluteX="80dp"
                        android:contentDescription="@string/greenbox"/>
                <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp" app:srcCompat="@drawable/redbox"
                        android:id="@+id/imageView8"
                        tools:layout_editor_absoluteY="189dp" tools:layout_editor_absoluteX="80dp"
                        android:contentDescription="@string/redbox"/>
                <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp" app:srcCompat="@drawable/bluebox"
                        android:id="@+id/imageView2"
                        tools:layout_editor_absoluteY="115dp" tools:layout_editor_absoluteX="80dp"
                        android:contentDescription="@string/bluebox"/>
                <ImageView
                        android:layout_width="74dp"
                        android:layout_height="74dp" app:srcCompat="@drawable/yellowbox"
                        android:id="@+id/imageView14"
                        tools:layout_editor_absoluteY="337dp" tools:layout_editor_absoluteX="80dp"
                        android:contentDescription="@string/yellowbox"/>
            </LinearLayout>

            <ImageView
                    android:layout_width="195dp"
                    android:layout_height="175dp" app:srcCompat="@drawable/reminjis_bunnlesred"
                    android:id="@+id/imageView"
                    tools:layout_editor_absoluteX="143dp" tools:layout_editor_absoluteY="408dp"
                    android:layout_marginTop="80dp" android:layout_marginStart="20dp"
                    android:contentDescription="@string/todo"/>
        </LinearLayout>
        <TextView
                android:text="@string/select_a_reminji"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView" android:layout_marginTop="20dp"
                android:fontFamily="sans-serif-black" android:textSize="20sp"/>
        <Spinner
                android:id="@+id/reminjiSpinner"
                android:layout_width="404dp"
                android:layout_height="50dp" tools:layout_editor_absoluteY="559dp"
                tools:layout_editor_absoluteX="3dp" android:layout_marginTop="2dp"/>
        <TextView
                android:text="@string/select_a_schedule_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView2" android:layout_marginTop="40dp"
                android:fontFamily="sans-serif-black" android:textSize="20sp"/>
        <Spinner
                android:id="@+id/typeSpinner"
                android:layout_width="404dp"
                android:layout_height="50dp" tools:layout_editor_absoluteY="636dp"
                tools:layout_editor_absoluteX="3dp" android:layout_marginTop="2dp"/>
        <Button
                android:text="@string/complete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/completeButton"
                android:background="@color/colorAccent" android:layout_marginStart="100dp"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>