<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="22dp" app:layout_constraintTop_toTopOf="parent"
    >

        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="412dp"
                android:layout_height="wrap_content"
                android:gravity="center" android:id="@+id/linearLayout6" tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="40dp">
            <Button
                    android:text="@string/master"
                    android:layout_height="46dp"
                    android:layout_width="87dp"
                    android:id="@+id/my_button7"
                    android:background="@color/colorAccent"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/eng_306"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:id="@+id/my_button3"
                    android:background="@color/planmoGreen"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/i_m_355"
                    android:layout_width="87dp"
                    android:layout_height="46dp"
                    android:id="@+id/my_button2"
                    android:background="@color/planmoYellow"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/i_m_361"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:id="@+id/my_button"
                    android:background="@color/planmoRed"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>

        <ImageView
                android:layout_width="395dp"
                android:layout_height="153dp" app:srcCompat="@drawable/greentask"
                tools:layout_editor_absoluteY="161dp" tools:layout_editor_absoluteX="0dp" android:id="@+id/imageView9"
                android:scaleType="fitCenter" android:contentDescription="@string/add_task"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp" app:srcCompat="@drawable/yellowtask"
                tools:layout_editor_absoluteY="161dp" tools:layout_editor_absoluteX="0dp" android:id="@+id/imageView4"
                android:scaleType="fitCenter" android:contentDescription="@string/add_task"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp" app:srcCompat="@drawable/redtask"
                tools:layout_editor_absoluteY="161dp" tools:layout_editor_absoluteX="0dp" android:id="@+id/imageView10"
                android:scaleType="fitCenter" android:contentDescription="@string/task_name"/>
        <Button
                android:layout_width="112dp"
                android:layout_height="127dp" android:id="@+id/createButton" android:background="@drawable/plus"/>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>