<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/linearLayout4"
            android:layout_marginTop="22dp" app:layout_constraintTop_toTopOf="parent"
    >
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" tools:layout_editor_absoluteX="-27dp" tools:layout_editor_absoluteY="40dp">
            <Button
                    android:text="@string/master"
                    android:layout_height="46dp"
                    android:layout_width="87dp"
                    android:id="@+id/my_button7"
                    android:background="@color/colorAccent"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/eng_306"
                    android:layout_width="87dp"
                    android:layout_height="46dp"
                    android:id="@+id/my_button3"
                    android:background="@color/planmoGreen"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/i_m_355"
                    android:layout_width="87dp"
                    android:layout_height="46dp"
                    android:id="@+id/my_button2"
                    android:background="@color/planmoYellow"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
            <Button
                    android:text="@string/i_m_361"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:id="@+id/my_button"
                    android:background="@color/planmoRed"
                    style="@style/Widget.AppCompat.Button.Borderless"/>
        </LinearLayout>
        <ImageView
                android:layout_width="395dp"
                android:layout_height="153dp" app:srcCompat="@drawable/yellowtask"
                tools:layout_editor_absoluteY="161dp" tools:layout_editor_absoluteX="0dp" android:id="@+id/imageView9"
                android:scaleType="fitCenter" android:contentDescription="@string/task_name"/>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="153dp" app:srcCompat="@drawable/yellowtask"
                tools:layout_editor_absoluteY="161dp" tools:layout_editor_absoluteX="0dp" android:id="@+id/imageView10"
                android:scaleType="fitCenter" android:contentDescription="@string/task_name"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
            <Button
                    android:layout_height="wrap_content"
                    android:id="@+id/my_button4"
                    android:background="@color/planmoYellow"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintHorizontal_bias="0.267"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_weight="1" android:layout_width="0dp" android:layout_marginTop="70dp"
                    android:text="@string/add_task" android:layout_marginEnd="70dp"/>
            <ImageView
                    android:layout_width="146dp"
                    android:layout_height="150dp"
                    android:id="@+id/reminjiView"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.967"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintVertical_bias="0.936" app:layout_constraintStart_toStartOf="parent"
                    app:srcCompat="@drawable/reminjis_cubileeyellow" android:contentDescription="@string/reminji"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>