<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="395dp"
            android:layout_height="230dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:gravity="center_horizontal"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.152"
            android:id="@+id/linearLayout3">
        <TextView
                android:text="@string/name_your_schedule"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"/>

        <EditText android:layout_width="match_parent"
                  android:layout_height="wrap_content" android:hint="@string/name_your_schedule"
                  android:importantForAutofill="no" android:inputType="text" tools:targetApi="o"/>
        <Button
                android:text="@string/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/nextButton"
                android:background="@color/colorAccent"
                android:layout_marginTop="20dp"/>
    </LinearLayout>
    <ImageView
            android:layout_width="418dp"
            android:layout_height="101dp" app:srcCompat="@drawable/beginningbar"
            android:id="@+id/imageView3"
            android:scaleType="fitCenter" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.571" android:contentDescription="@string/statusbar"/>
</android.support.constraint.ConstraintLayout>